# AP2_WK5_2

./: CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake
CMakeScripts/: ReRunCMake.make
VST3/Debug/basicDelay.vst3/Contents/: Info.plist  moduleinfo.json
VST3/Debug/basicDelay.vst3/Contents/MacOS/: basicDelay
VST3/Debug/basicDelay.vst3/Contents/_CodeSignature/: CodeResources
basicDelay.xcodeproj/: project.pbxproj
basicDelay.xcodeproj/xcshareddata/xcschemes/: basicDelay.xcscheme
vst3sdk/: cmake_install.cmake
vst3sdk/CMakeScripts/: ReRunCMake.make
vst3sdk/base/: cmake_install.cmake
vst3sdk/base/CMakeScripts/: ReRunCMake.make
vst3sdk/base/smtg_base.xcodeproj/: project.pbxproj
vst3sdk/pluginterfaces/: cmake_install.cmake
vst3sdk/pluginterfaces/CMakeScripts/: ReRunCMake.make
vst3sdk/pluginterfaces/smtg_pluginterfaces.xcodeproj/: project.pbxproj
vst3sdk/public.sdk/: cmake_install.cmake
vst3sdk/public.sdk/CMakeScripts/: ReRunCMake.make
vst3sdk/public.sdk/samples/vst-hosting/: cmake_install.cmake
vst3sdk/public.sdk/samples/vst-hosting/audiohost/: cmake_install.cmake
vst3sdk/public.sdk/samples/vst-hosting/editorhost/: cmake_install.cmake
vst3sdk/public.sdk/samples/vst-hosting/inspectorapp/: cmake_install.cmake
vst3sdk/public.sdk/samples/vst-hosting/validator/: cmake_install.cmake
vst3sdk/public.sdk/samples/vst-utilities/: cmake_install.cmake
vst3sdk/public.sdk/samples/vst-utilities/moduleinfotool/: cmake_install.cmake
vst3sdk/public.sdk/smtg_public_sdk.xcodeproj/: project.pbxproj
vst3sdk/public.sdk/source/vst/interappaudio/: cmake_install.cmake
vst3sdk/vstsdk.xcodeproj/: project.pbxproj
